--- a/src/app/_pages/about/about.component.html
+++ b/src/app/_pages/about/about.component.html
@@ -6,7 +6,8 @@
       <div class="col-xl-8 col-lg-9">
         <div class="px-md-12 text-center mb-11 mb-lg-14">
           <h2 class="title gr-text-2 mb-9 mb-lg-12">Our Story</h2>
-          <p class="gr-text-8 mb-0">Toothpick dental staff is privately owned rapidly growing recruitment agency specialises in recruiting dental nurses and receptionists.</p>
+          <p class="gr-text-8 mb-0">Toothpick dental staff is privately owned rapidly growing recruitment agency
+            specialises in recruiting dental nurses and receptionists.</p>
         </div>
       </div>
       <div class="col-12">
@@ -27,9 +28,11 @@
       </div>
       <div class="col-lg-6">
         <div class="pr-xl-13">
-          <p class="gr-text-8 mb-7 mb-lg-10">Having experienced various problems while in the business, we truly understand that Staff shortage is the biggest challenge to run your business smoothly and meet the patients’ expectations.
+          <p class="gr-text-8 mb-7 mb-lg-10">Having experienced various problems while in the business, we truly
+            understand that Staff shortage is the biggest challenge to run your business smoothly and meet the patients’
+            expectations.
             With that, we are here to help you with all your staffing requirements!
- </p>
+          </p>
           <!-- <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p> -->
         </div>
       </div>
@@ -44,24 +47,31 @@
         <div class="content-grid-image-group d-flex  mx-sm-n3">
           <div class="single-image d-flex flex-column px-3 px-sm-6">
             <!-- single image -->
-            <img src="./assets/image/inner/about-content-1.png" alt="" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
+            <img src="./assets/image/inner/about-content-1.png" alt="" data-aos="zoom-in" data-aos-duration="500"
+              data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
             <!-- single image -->
-            <img src="./assets/image/inner/about-content-2.png" alt="" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="800" data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
+            <img src="./assets/image/inner/about-content-2.png" alt="" data-aos="zoom-in" data-aos-duration="500"
+              data-aos-delay="800" data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
           </div>
           <div class="single-image d-flex flex-column pt-11 px-3 px-sm-6">
             <!-- single image -->
-            <img src="./assets/image/inner/about-content-3.png" alt="" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="400" data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
+            <img src="./assets/image/inner/about-content-3.png" alt="" data-aos="zoom-in" data-aos-duration="500"
+              data-aos-delay="400" data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
             <!-- single image -->
-            <img src="./assets/image/inner/about-content-4.png" alt="" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1200" data-aos-once="true" class="w-100 rounded-10">
+            <img src="./assets/image/inner/about-content-4.png" alt="" data-aos="zoom-in" data-aos-duration="500"
+              data-aos-delay="1200" data-aos-once="true" class="w-100 rounded-10">
           </div>
         </div>
       </div>
       <div class="col-sm-8 col-lg-6 col-xl-5 offset-lg-1 offset-lg-1 offset-xl-0">
         <div class="content-text">
           <h2 class="gr-text-3 mb-7 mb-lg-11">Our Services and Areas.</h2>
-          <p class="gr-text-8 mb-7 mb-lg-10">We provide services to wide range of businesses within the industry including NHS/Private practices, specialist practices, NHS hospital Trusts, Community dental clinics, Military and corporate business across five counties: Berkshire, Hampshire, Hampshire, Buckinghamshire and Oxfordshire.
+          <p class="gr-text-8 mb-7 mb-lg-10">We provide services to wide range of businesses within the industry
+            including NHS/Private practices, specialist practices, NHS hospital Trusts, Community dental clinics,
+            Military and corporate business across five counties: Berkshire, Hampshire, Hampshire, Buckinghamshire and
+            Oxfordshire.
 
- </p>
+          </p>
           <!-- <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p> -->
         </div>
       </div>
@@ -79,59 +89,37 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-left mb-lg-n15 mb-0">
+    <div class="row justify-content-left mb-lg-n15 mb-0  text-center">
       <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
         <div class="team-card">
           <div class="card-image">
-            <img src="assets/image/inner/team-image-1.png" alt="" class="w-100">
+            <img src="assets/image/inner/director3.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
             <h3 class="gr-text-7 mb-2">Rekha Rai</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Founder</p>
+            <p class="gr-text-9 mb-0 line-height-1">Director</p>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
         <div class="team-card">
           <div class="card-image">
-            <img src="assets/image/inner/team-image-2.png" alt="" class="w-100">
+            <img src="assets/image/inner/bd.png" alt="" class="w-100">
+          </div>
+          <div class="card-text pt-9">
+            <h3 class="gr-text-7 mb-2">Hiring</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Business Development Manager</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+        <div class="team-card">
+          <div class="card-image">
+            <img src="assets/image/inner/sumo.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
             <h3 class="gr-text-7 mb-2">Sumnima Limbu</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Administrator</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
-        <div class="team-card">
-          <div class="card-image">
-            <img src="assets/image/inner/team-image-3.png" alt="" class="w-100">
-          </div>
-          <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Mausam Ninglekhu</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Manager</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
-        <div class="team-card">
-          <div class="card-image">
-            <img src="assets/image/inner/team-image-4.png" alt="" class="w-100">
-          </div>
-          <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Pratik Dahal</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
-        <div class="team-card">
-          <div class="card-image">
-            <img src="assets/image/inner/team-image-5.png" alt="" class="w-100">
-          </div>
-          <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Sabil Shrestha</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
+            <p class="gr-text-9 mb-0 line-height-1">Booking Co-ordinator</p>
           </div>
         </div>
       </div>
@@ -141,31 +129,105 @@
             <img src="assets/image/inner/team-image-6.png" alt="" class="w-100">
           </div>
           <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Ishan Chemjong</h3>
-            <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
+            <h3 class="gr-text-7 mb-2">Alisha Gurung</h3>
+            <p class="gr-text-9 mb-0 line-height-1">Area Manager</p>
+          </div>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+      <div class="team-card">
+        <div class="card-image">
+          <img src="assets/image/inner/team-image-7.png" alt="" class="w-100">
+        </div>
+        <div class="card-text pt-9">
+          <h3 class="gr-text-7 mb-2">Dolma Lama</h3>
+          <p class="gr-text-9 mb-0 line-height-1">Area Manager</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+      <div class="team-card">
+        <div class="card-image">
+          <img src="assets/image/inner/yasi.png" alt="" class="w-100">
+        </div>
+        <div class="card-text pt-9">
+          <h3 class="gr-text-7 mb-2">Yasi Limbu</h3>
+          <p class="gr-text-9 mb-0 line-height-1">Account</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+      <div class="team-card">
+        <div class="card-image">
+          <img src="assets/image/inner/sangam.png" alt="" class="w-100">
+        </div>
+        <div class="card-text pt-9">
+          <h3 class="gr-text-7 mb-2">Sangam Ninglekhu</h3>
+          <p class="gr-text-9 mb-0 line-height-1">Data Scientist</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+      <div class="team-card">
+        <div class="card-image">
+          <img src="assets/image/inner/pratik.png" alt="" class="w-100">
+        </div>
+        <div class="card-text pt-9 ">
+          <h3 class="gr-text-7 mb-2">Pratik Dahal</h3>
+          <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
+      <div class="team-card">
+        <div class="card-image">
+          <img src="assets/image/inner/pratik.jpg" alt="" class="w-100">
+        </div>
+        <div class="card-text pt-9">
+          <h3 class="gr-text-7 mb-2">Pratik Dahal</h3>
+          <p class="gr-text-9 mb-0 line-height-1">Programmer</p>
+        </div>
+      </div>
+    </div> -->
+
+    <!-- <div class="col-lg-3 col-md-4 col-xs-6 mb-13 d-flex align-items-center">
+      <div class="mt-xs-n25">
+        <h3 class="gr-text-6">Interested to join <br>
+          our team ?</h3>
+        <a href="#" class="btn-link with-icon gr-text-blue gr-text-7 font-weight-bold mt-5">Apply now <i
+            class="icon icon-tail-right font-weight-bold"></i></a>
+      </div>
+    </div> -->
+  </div>
+</div>
+</div>
+<!-- Content section (About Page) -->
+<div class="content-section pt-14 pt-lg-27 pb-13 pb-lg-27 bg-default-2">
+  <div class="container">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-sm-8 col-lg-5 col-xl-6 mb-9 mb-lg-0">
+        <div class="content-grid-image-group d-flex  mx-sm-n3">
+          <div class="single-image d-flex flex-column px-3 px-sm-6">
+            <!-- single image -->
+            <img src="./assets/image/inner/msgFromDirector.png" alt="" data-aos="zoom-in" data-aos-duration="500"
+              data-aos-once="true" class="w-100 pb-6 pb-sm-9 rounded-10">
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-md-4 col-xs-6 mb-lg-15 mb-13">
-        <div class="team-card">
-          <div class="card-image">
-            <img src="assets/image/inner/team-image-7.png" alt="" class="w-100">
-          </div>
-          <div class="card-text pt-9">
-            <h3 class="gr-text-7 mb-2">Isaiah Griffin</h3>
-            <p class="gr-text-9 mb-0 line-height-1">UX Designer</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-4 col-xs-6 mb-13 d-flex align-items-center">
-        <div class="mt-xs-n25">
-          <h3 class="gr-text-6">Interested to join <br>
-      our team ?</h3>
-          <a href="#" class="btn-link with-icon gr-text-blue gr-text-7 font-weight-bold mt-5">Apply now <i class="icon icon-tail-right font-weight-bold"></i></a>
+      <div class="col-sm-8 col-lg-6 col-xl-5 offset-lg-1 offset-lg-1 offset-xl-0">
+        <div class="content-text">
+          <h2 class="gr-text-3 mb-7 mb-lg-11">Message from the Director.</h2>
+          <p class="gr-text-8 mb-7 mb-lg-10">" Having a clinical and management background with over 7+ years of an
+            experience in the dental sector, we highly value empathy to connect the dots between the needs of the dental
+            practices and our staff in order to produce the best experience for them.
+            We treasure mutualism and relevancy in that we match the requirements of the demand with the right staff. We
+            believe this is our recipe for building sustainable relationships with our clients and staff. "
+
+          </p>
+          <!-- <p class="gr-text-8 mb-0">With lots of unique blocks, you can easily build a page without coding. Build your next landing page. With lots of unique blocks, you can easily build a page without coding any other page.</p> -->
         </div>
       </div>
     </div>
   </div>
 </div>
-
 <app-footer></app-footer>
