--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -40,7 +40,7 @@
           <div class="hero-content section-title light-mode-texts text-center">
             <div class="avatar10">
               <h4 class="pre-title text-tds gr-text-12 text-uppercase mb-10">HELPING YOU WILL ALL YOUR STAFFING
-                REQUIREMENTS</h4>
+                REQUIREMENTS!</h4>
 
               <h1 class="gr-text-2 font-weight-bold mb-12">Toothpick Dental Staff</h1>
             </div>
@@ -57,7 +57,7 @@
               </div>
               <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
                 <a href="signup">
-                <button type="submit" class="btn btn-info search-btn">Book</button>
+                  <button type="submit" class="btn btn-info search-btn">Book</button>
                 </a>
               </div>
             </div>
@@ -125,6 +125,75 @@
     </div>
   </div>
 </div> -->
+
+
+  <!-- Testimonial section -->
+  <div class="bg-blackish-blue dark-mode-texts testimonial-section pt-15 pt-lg-22 pb-15 pb-lg-25 ">
+    <div class="container">
+      <div class="row justify-content-center dark-mode-texts">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+          <div class="section-title text-center mb-11 mb-lg-15">
+            <h2 class="title-sm gr-text-5 mb-0 text-white"><span class="strike-bottom green">1,749 remote teams</span>
+              have shared their experience with our app!</h2>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
+          <div
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-hover-opacity-full">
+            <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
+              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img1.jpg" alt="">
+            </div>
+            <div class="testimonial-content">
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“OMG! I cannot believe that I have got a brand
+                new landing page after getting Omega. It was super easy to edit and publish.”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Isaac Olson</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-delay="200"
+          data-aos-once="true">
+          <div
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-opacity-7 gr-hover-opacity-full">
+            <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
+              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img2.jpg" alt="">
+            </div>
+            <div class="testimonial-content">
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Simply the best. Better than all the rest. I’d
+                recommend this product to beginners and advanced users who want success.”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Barry Young</span>
+            </div>
+          </div>
+        </div>
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-delay="400"
+          data-aos-once="true">
+          <div
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-opacity-5 gr-hover-opacity-full">
+            <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
+              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img3.jpg" alt="">
+            </div>
+            <div class="testimonial-content">
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Must have book for all, who want to be Product
+                Designer or Interaction Designer.”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Esther Allison</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-7 text-center pt-10">
+          <div class="more-btn testimonial-btn">
+            <a href="https://www.google.com/search?q=toothpickdentalstaff&oq=toothpickdentalstaff&aqs=chrome.0.69i59j46i13i175i199j0i390j69i60l5.5060j0j7&sourceid=chrome&ie=UTF-8#lrd=0x48769bfff72cb1af:0xdaae04b2387b5d9d,1,,," target="_blank" class="btn-link with-icon text-green font-weight-bold">Read more reviews<i
+                class="icon icon-tail-right font-weight-bold"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
   <!-- Locations section  -->
   <div class="location-section bg-default-4 pt-14 pb-7 py-lg-23">
     <div class="container">
