about section updated

--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -249,8 +249,21 @@
               <li class="nav-item">
                 <a class="nav-link" href="/" role="button" aria-expanded="false">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about" role="button" aria-expanded="false">About</a>
+              <li class="nav-item dropdown" >
+                <a class="nav-link dropdown-toggle gr-toggle-arrow" id="navbarDropdown02" href="#features" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About <i class="icon icon-small-down"></i></a>
+                <ul class="gr-menu-dropdown dropdown-menu" aria-labelledby="navbarDropdown02">
+                  <li class="drop-menu-item">
+                    <a href="about">
+                      About Us
+                    </a>
+                  </li>
+                  <li class="drop-menu-item">
+                    <a href="team">
+                      Team
+                    </a>
+                  </li>
+
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="career" role="button" aria-expanded="false">Career</a>
@@ -272,123 +285,7 @@
                       Dental Practice Sign Up
                     </a>
                   </li>
-                  <!-- <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown21" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Career
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown21">
-                      <li class="drop-menu-item">
-                        <a href="job-opening.html">
-                          Job opening
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="job-details.html">
-                          Job Details
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown24" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Pricing
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown24">
-                      <li class="drop-menu-item">
-                        <a href="pricing-1.html">
-                          Pricing 01
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="pricing-2.html">
-                          Pricing 02
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="pricing-3.html">
-                          Pricing 03
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown25" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Contact
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown25">
-                      <li class="drop-menu-item">
-                        <a href="contact.html">
-                          Contact 01
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="contact-2.html">
-                          Contact 02
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="contact-3.html">
-                          Contact 03
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown26" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Account
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown26">
-                      <li class="drop-menu-item">
-                        <a href="sign-in.html">
-                          Sign In
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="sign-up.html">
-                          Sign Up
-                        </a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="forget-pass.html">
-                          Reset Password
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown27" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Utitlity
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown27">
-                      <li class="drop-menu-item">
-                        <a href="terms.html">
-                          Terms & Conditions
-                        </a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="drop-menu-item dropdown">
-                    <a class="dropdown-toggle gr-toggle-arrow" id="navbarDropdown28" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      E-commerce
-                      <i class="icon icon-small-down"></i>
-                    </a>
-                    <ul class="gr-menu-dropdown dropdown-menu dropdown-right" aria-labelledby="navbarDropdown28">
-                      <li class="drop-menu-item">
-                        <a href="product-details.html">Product Details</a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="cart.html">Cart</a>
-                      </li>
-                      <li class="drop-menu-item">
-                        <a href="checkout.html">Checkout</a>
-                      </li>
-                    </ul>
-                  </li> -->
+
                 </ul>
               </li>
 
