--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,20 +1,30 @@
 <!-- Footer section -->
 <div class="footer-section bg-default-4">
   <div class="container">
-    <div class="footer-top pt-15 pt-lg-25 pb-lg-19">
+    <div class="footer-top pt-15">
       <div class="row">
-        <div class="col-6 col-lg-2">
+        <div class="col-6 col-lg-4">
           <div class="single-footer mb-13 mb-lg-9">
             <p class="footer-title gr-text-11 mb-7">Company</p>
             <ul class="footer-list list-unstyled">
-              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">About us</a></li>
-              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Contact us</a></li>
-              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Careers</a></li>
-              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Press</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="home">Home</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="about">About</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="career">Career</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="contact">Contact</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="signup">Sign Up</a></li>
             </ul>
           </div>
         </div>
-        <div class="col-6 col-lg-2">
+        <div class="col-6 col-lg-4">
+          <div class="single-footer mb-13 mb-lg-9">
+            <p class="footer-title gr-text-11 mb-7">Useful Links</p>
+            <ul class="footer-list list-unstyled">
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Privacy Policy</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Terms of Use</a></li>
+            </ul>
+          </div>
+        </div>
+        <!-- <div class="col-6 col-lg-2">
           <div class="single-footer mb-13 mb-lg-9">
             <p class="footer-title gr-text-11 mb-7">Product</p>
             <ul class="footer-list list-unstyled">
@@ -46,10 +56,10 @@
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="">Return Policy</a></li>
             </ul>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
+        </div> -->
+        <div class="col-md-6 col-lg-4">
           <div class="single-footer mb-13 mb-lg-9">
-            <p class="footer-title gr-text-11 mb-7">Contact us</p>
+            <p class="footer-title gr-text-11 mb-7">Drop a line</p>
             <ul class="footer-list list-unstyled">
               <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="mailto:booking@toothpickdentalstaff.com">booking@toothpickdentalstaff.com</a></li>
               <li class="py-2"><a class="gr-text-9 text-primary font-weight-bold hover-underline active" href="tel:+44 07444831232">+44 07444831232</a></li>
