--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -128,13 +128,15 @@
 
 
   <!-- Testimonial section -->
-  <div class="bg-blackish-blue dark-mode-texts testimonial-section pt-15 pt-lg-22 pb-15 pb-lg-25 ">
+  <div class="bg-tds dark-mode-texts testimonial-section pt-15 pt-lg-22 pb-15 pb-lg-25 ">
     <div class="container">
       <div class="row justify-content-center dark-mode-texts">
         <div class="col-md-8 col-lg-7 col-xl-6">
           <div class="section-title text-center mb-11 mb-lg-15">
-            <h2 class="title-sm gr-text-5 mb-0 text-white"><span class="strike-bottom green">1,749 remote teams</span>
-              have shared their experience with our app!</h2>
+            <h2 class="title-sm gr-text-5 mb-0 text-white">
+              What our clients have to say about their <span class="strike-bottom green">
+              experience</span>
+              </h2>
           </div>
         </div>
       </div>
@@ -143,40 +145,64 @@
           <div
             class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-hover-opacity-full">
             <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
-              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img1.jpg" alt="">
+              <!-- <img class="circle-xxl w-100" src="assets/image/l6/jpg/l6-testimonial-img1.jpg" alt=""> -->
+
             </div>
             <div class="testimonial-content">
-              <p class="review-text gr-text-7 text-blackish-blue mb-6">“OMG! I cannot believe that I have got a brand
-                new landing page after getting Omega. It was super easy to edit and publish.”</p>
-              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Isaac Olson</span>
+              <img class="rating mb-11" src="assets/image/l5/png/5-stars.png" alt="">
+
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Worked with Alisha today, would highly recommend her and the whole agency! Alisha was very professional, highly skilled and very helpful to me and the whole team. Previously also worked with Rekha who was amazingly helpful and great to work with. Thanks Toothpick Dental!”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Dr. Albert Gajdos</span>
+
             </div>
           </div>
         </div>
-        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-delay="200"
-          data-aos-once="true">
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
           <div
-            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-opacity-7 gr-hover-opacity-full">
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-hover-opacity-full">
             <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
-              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img2.jpg" alt="">
+              <!-- <img class="circle-xxl w-100" src="assets/image/l6/jpg/l6-testimonial-img1.jpg" alt=""> -->
+
             </div>
             <div class="testimonial-content">
-              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Simply the best. Better than all the rest. I’d
-                recommend this product to beginners and advanced users who want success.”</p>
-              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Barry Young</span>
+              <img class="rating mb-11" src="assets/image/l5/png/5-stars.png" alt="">
+
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Very reliable and professional, upto date with all cross infection.
+                Patients well looked after. Special thanks to Rekha Rai.”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Dr. Nahid Rahman</span>
+
             </div>
           </div>
         </div>
-        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-delay="400"
-          data-aos-once="true">
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
           <div
-            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-opacity-5 gr-hover-opacity-full">
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-hover-opacity-full">
             <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
-              <img class="circle-xxl w-100" src="image/l6/jpg/l6-testimonial-img3.jpg" alt="">
+              <!-- <img class="circle-xxl w-100" src="assets/image/l6/jpg/l6-testimonial-img1.jpg" alt=""> -->
+
             </div>
             <div class="testimonial-content">
-              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Must have book for all, who want to be Product
-                Designer or Interaction Designer.”</p>
-              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Esther Allison</span>
+              <img class="rating mb-11" src="assets/image/l5/png/5-stars.png" alt="">
+
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“A dental assistant is a Dentist’s left hand- and we are always in fear of working with a Locum. Today I had Dolma from Toothpick. She was an angel, handling my complex treatments and tricky patients with a calm professional manner.”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Dr. Ronit Patel</span>
+
+            </div>
+          </div>
+        </div>
+        <div class="col-10 col-lg-8 mb-7" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
+          <div
+            class="testimonial-card d-flex flex-column flex-md-row align-items-md-center border rounded-12 bg-white pt-9 pb-8 px-9 gr-hover-opacity-full">
+            <div class="card-image rounded-circle mr-9 mb-7 mb-md-0">
+              <!-- <img class="circle-xxl w-100" src="assets/image/l6/jpg/l6-testimonial-img1.jpg" alt=""> -->
+
+            </div>
+            <div class="testimonial-content">
+              <img class="rating mb-11" src="assets/image/l5/png/5-stars.png" alt="">
+
+              <p class="review-text gr-text-7 text-blackish-blue mb-6">“Professional, friendly, efficient, organised and make your day more seamless and enjoyable from start to finish ❤️ I have had the pleasure of working with Rekha, Dolma and Manita - could not recommend more highly. Thank you!”</p>
+              <span class="name gr-text-9 text-blackish-blue gr-opacity-7 mb-0">Dr. Radha</span>
+
             </div>
           </div>
         </div>
