--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -9,6 +9,7 @@
             <ul class="footer-list list-unstyled">
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="home">Home</a></li>
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="about">About</a></li>
+              <li class="py-2"><a class="gr-text-9 gr-text-color" href="team">Team</a></li>
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="career">Career</a></li>
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="contact">Contact</a></li>
               <li class="py-2"><a class="gr-text-9 gr-text-color" href="signup">Sign Up</a></li>
