faq components created

--- a/src/app/_pages/signup/signup.component.html
+++ b/src/app/_pages/signup/signup.component.html
@@ -19,8 +19,14 @@
 <div class=" pb-5 pb-md-33 bg-default-2 ">
   <div class="container">
     <div class="row justify-content-center">
+
       <div class="col-12">
-        <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10">
+
+        <div class="login-form bg-white border-gray-3 px-8 pt-8 pb-9 px-sm-11 py-sm-11 shadow-1 rounded-10 text-center">
+          <p class="gr-text-8 mb-13">
+            <a href="signin">Log in</a> to book if you already have an account or creat an account below if you are new.
+          </p>
+
 
           <div class="row location-filter-form d-flex flex-wrap justify-content-center">
             <div class="col-md-4 col-sm-4 col-xs-4 mb-4">
