--- a/src/app/_pages/career/career.component.html
+++ b/src/app/_pages/career/career.component.html
@@ -141,7 +141,7 @@
   </div>
 </div>
 
-<app-jobopenings>
-</app-jobopenings>
+<!-- <app-jobopenings>
+</app-jobopenings> -->
 
  <app-footer></app-footer>
