--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -158,7 +158,7 @@
       <div class="col-lg-6">
         <div class="content-widget mt-7 mt-lg-0 pr-lg-13 pl-xl-19">
           <div class="row align-items-center">
-            <p class="gr-text-8 px-lg-7 px-xl-0">
+            <p class="gr-text-8 px-lg-7 px-xl-0 pl-2">
             In additional to general nurses, we also provide the specialist nurses who are trained and qualified in the
             following:
             </p>
@@ -168,7 +168,7 @@
                   <span class="count text-white gr-text-9">1</span>
                 </div>
                 <div class="media-body">
-                  <h3 class="w-title mb-5 gr-text-7">Radiography, Oral surgery, Implantology</h3>
+                  <h3 class="w-title mb-5 gr-text-7">Implantology, Periodontology, Oral surgery, Endodontics</h3>
                 </div>
               </div>
             </div>
@@ -178,7 +178,7 @@
                   <span class="count text-white gr-text-9">2</span>
                 </div>
                 <div class="media-body">
-                  <h3 class="w-title mb-5 gr-text-7">Periodontology, Endodontic, Orthodontic (Fixed Brace/Invisalign)</h3>
+                  <h3 class="w-title mb-5 gr-text-7">Orthodontic (Fixed Brace/Invisalign) Composite Bonding</h3>
                 </div>
               </div>
             </div>
@@ -188,7 +188,8 @@
                   <span class="count text-white gr-text-9">3</span>
                 </div>
                 <div class="media-body">
-                  <h3 class="w-title mb-5 gr-text-7">Impression taking, Cerec, PRGF, Sedation</h3>
+                  <h3 class="w-title mb-5 gr-text-7">CEREC, PRGF, Sedation, Dental Radiography, Digital scanning (itero)
+                  </h3>
                 </div>
               </div>
             </div>
@@ -198,7 +199,7 @@
                   <span class="count text-white gr-text-9">4</span>
                 </div>
                 <div class="media-body">
-                  <h3 class="w-title mb-5 gr-text-7">Dental photography, Composite Bonding, TC</h3>
+                  <h3 class="w-title mb-5 gr-text-7">Impression taking, Dental photography, Orthodontic/Implant TC</h3>
                 </div>
               </div>
             </div>
